bk_ida/gccida/g2/find_oldest_value_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/regrename.c:1776:29: error: must use 'enum' tag to refer to type 'reg_class'
rtx  find_oldest_value_reg( reg_class a1, rtx reg,  struct value_data *vd) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/regrename.c:1778:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/regrename.c:1802:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v5] - 5) <= 1 && ( unsigned int)( mode_class_0[mode] - 5) > 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/regrename.c:1802:70: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v5] - 5) <= 1 && ( unsigned int)( mode_class_0[mode] - 5) > 1 ) 
                                                                     ^~~~~~~~~~~~
                                                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/regrename.c:1843:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = ( ( unsigned int)( mode_class_0[v5] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/regrename.c:1844:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[mode] - 5) > 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/regrename.c:1869:24: error: assigning to 'uint32' (aka 'unsigned int') from incompatible type 'struct rtx_def'
*( _DWORD *)&result[1] = reg[1]; 
                       ^ ~~~~~~
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_oldest_value_reg/src/obj/regrename.o] Error 1
